# ArxPrism

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_doctor.py  run_frontend.py  run_local.py
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/evolution/: page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/login/: LoginClient.tsx  page.tsx
frontend/src/app/papers/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/auth/: RequireAuth.tsx
frontend/src/components/graph/: EvolutionGraphView.tsx  EvolutionHoverEdge.tsx  LabeledEdge.tsx  MethodDetailPanel.tsx  NodeDetailPanel.tsx  PaperGraphView.tsx  graphNodes.tsx
frontend/src/components/papers/: PaperPdfViewer.tsx
spec/: ARCHITECTURE.md  CODE_REVIEW.md  DIAGRAMS.md  PROMPT_ENGINEERING.md  TECH_DESIGN.md  supabase_schema.sql
src/: main.py
src/api/: __init__.py  admin_routes.py  arxiv_routes.py  auth.py  deps_quota.py  me_routes.py  routes.py  task_routes.py
src/core/: config.py
src/database/: neo4j_client.py
src/frontend/: __init__.py  app.py  graph_queries.py
src/models/: __init__.py  auth_models.py  schemas.py  task_models.py
src/services/: __init__.py  arxiv_radar.py  llm_extractor.py  r2_storage.py  runtime_settings.py  supabase_backend.py  task_manager.py
src/worker/: __init__.py  tasks.py
(+13 files in other folders)
